back_dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traveltime-app
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-app
      labels:
        app: backend
    spec:
      containers:
      - name: backend-app
        image: igeolise/k8s-task-backend:1.0.0

        livenessProbe:
          httpGet:
            port: 8080
            path: /api/is-alive
          periodSeconds: 5
          failureThreshold: 3

---

kind: Service
apiVersion: v1
metadata:
  namespace: traveltime-app
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - port: 8080
