front_dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traveltime-app
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-app
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-app
        image: igeolise/k8s-task-frontend:1.0.0

        livenessProbe:
          httpGet:
            port: 3000
            path: /
          periodSeconds: 5
          failureThreshold: 3

---

kind: Service
apiVersion: v1
metadata:
  namespace: traveltime-app
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
