ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: traveltime-app
  name: app-ingress
spec:
  rules:
  - http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
